--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -20,7 +20,7 @@
 }
 
 body {
-    color: #fff;
+    color: #ffffff;
     line-height: 1.6;
 }
 
@@ -57,7 +57,7 @@ h1, h2, h3 {
     margin-bottom: 20px;
 }
 
-/* ===== Navbar Section ===== */
+/*  Navbar Section  */
 .navbar {
     background-image: url('/Assets/Hero-bg.png');
     background-size: cover;
@@ -78,7 +78,7 @@ h1, h2, h3 {
     text-decoration: none;
 }
 
-/* ===== Banner Section ===== */
+/*  Banner Section  */
 .banner {
     background-image: url('/Assets/Hero-bg.png');
     background-size: cover;
@@ -101,7 +101,7 @@ h1, h2, h3 {
     margin-bottom: 30px;
 }
 
-/* ===== Action Section ===== */
+/*  Action Section  */
 .action {
     background-color: #f8f9fa;
     color: #333;
@@ -222,13 +222,13 @@ h1, h2, h3 {
 }
 
 .review-card {
-    background-color: #f8f9fa;
+    background-color: #FFFFFF;
     border-radius: 10px;
     padding: 30px;
     flex: 1;
     min-width: 300px;
     text-align: left;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.05);
 }
 
 .stars {
@@ -351,4 +351,43 @@ h1, h2, h3 {
     background-color: #3a56d4;
     transform: translateY(-3px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Footer Section */
+.footer {
+    background-color: #ffffff;
+    text-align: center;
+    padding: 60px 0;
+}
+
+.footer-logo {
+    font-size: 100px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #4E47FF;
+}
+
+.footer-p{
+    color: #8987A1;
+    font-size: 1rem;
+    max-width: 550px;
+    margin: 0 auto 30px auto; /* centers paragraph with fixed width */
+    line-height: 1.6;
+}
+.footer-links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 30px 0;
+}
+
+.footer-links a {
+    color: #8987A1;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 16px;
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
 }
