--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -1,4 +1,4 @@
-/* ===== Global Styles ===== */
+/* Global Styles */
 * {
     margin: 0;
     padding: 0;
@@ -7,17 +7,17 @@
 
 
 .raleway-normal {
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 
 .inter-normal {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-}
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    }
 
 body {
     color: #ffffff;
