--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -149,6 +149,7 @@ h1, h2, h3 {
     height: 300px;
     background-color: #E6EDF9; 
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -242,11 +243,6 @@ h1, h2, h3 {
     color: #fdbe02;
     font-size: 24px;
     text-decoration: none;
-    transition: transform 0.2s;
-}
-
-.star:hover {
-    transform: scale(1.2);
 }
 
 .review-text {
@@ -335,7 +331,7 @@ h1, h2, h3 {
 
 .form-btn {
     display: inline-block;
-    width: 550px;
+    width: 600px;
     padding: 20px 30px;
     background-color: #4361ee;
     color: #FFFFFF;
