--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -145,8 +145,8 @@ h1, h2, h3 {
     padding: 140px 0;
 }
 .box{
-    max-width: 1140px;
-    height: 300px;
+    max-width: 1240px;
+    min-height: 300px;
     background-color: #E6EDF9; 
     display: flex;
     justify-content: space-around;
