--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -59,7 +59,7 @@ h1, h2, h3 {
 
 /*  Navbar Section  */
 .navbar {
-    background-image: url('/Assets/Hero-bg.png');
+    background-image: url('../Assets/Hero-bg.png');
     background-size: cover;
     background-position: center;
     padding: 20px 0;
@@ -80,7 +80,7 @@ h1, h2, h3 {
 
 /*  Banner Section  */
 .banner {
-    background-image: url('/Assets/Hero-bg.png');
+    background-image: url('../Assets/Hero-bg.png');
     background-size: cover;
     background-position: center;
     height: 500px;
